Se elimina lo que no se va a ocupar del proyecto

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -84,7 +84,7 @@ $width-form: 20rem;
             // margin-left: 0.5rem;
             display: flex;
             flex-wrap: nowrap;
-            justify-content: flex-end;
+            justify-content: center;
             align-items: center;
             color: lighten(#ec0000, 33%) !important;
             font-weight: 400;
