--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,45 +6,7 @@
     </div>
 
     <ul class="nav-items">
-
-      <li class="nav-items-menu" mat-menu-item
-        [class.only-icons]="settings.config.sidebarType === 'mini'"
-        [matTooltip]="settings.config.sidebarType === 'mini' ? menu.txtDescMod : ''"
-        matTooltipPosition="below"
-        *ngFor="let menu of settings.menu">
-
-        <div *ngIf="menu.subMenus && menu.subMenus.length > 0">
-          <span class="hasitems-menu" [matMenuTriggerFor]="navs.childMenu">
-            <i class="fa fa-brain"></i>
-            <span class="ml-2 mr-2" *ngIf="settings.config.sidebarType === 'normal'">
-              {{ menu.txtDescMod | truncate: 20 }}
-            </span>
-            <i class="fa fa-angle-down"
-              [class.ml-2]="settings.config.sidebarType === 'mini'">
-            </i>
-          </span>
-          <menu-item #navs [items]="menu.subMenus" [title]="menu.txtDescMod"></menu-item>
-        </div>
-
-        <div *ngIf="!menu.subMenus || menu.subMenus.length === 0">
-          <a *ngIf="menu.txtUrlNav !== ''"
-            [href]="menu.txtUrlNav" target="_blank">
-            <i class="fa fa-link"></i>
-            <span class="ml-2" *ngIf="settings.config.sidebarType === 'normal'">
-              {{ menu.txtDescMod | truncate: 20 }}
-            </span>
-          </a>
-          <span *ngIf="menu.txtUrlNav === ''">
-            <!-- [routerLink]="menu.tpoCodUrl"> -->
-            <i class="fa fa-road"></i>
-            <span class="ml-2" *ngIf="settings.config.sidebarType === 'normal'">
-              {{ menu.txtDescMod | truncate: 20 }}
-            </span>
-          </span>
-        </div>
-
-      </li>
-
+      <li>Navbar</li>
     </ul>
   </div>
 
